<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".Common.LoginSignup.StartUpScreen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/retailer_circle_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/muli_black"
                android:text="@string/retailer_heading"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="36sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/muli_semibold"
                android:text="@string/retailer_tag_line"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/darkSeaGreen"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    tools:ignore="ButtonStyle"
                    android:textStyle="bold"
                    android:transitionName="transition_login"/>

                <Button
                    android:id="@+id/signup_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@color/darkSeaGreen"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>