<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.SignUp"
    android:background="@color/white"
    android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/signup_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/back_buttn"
                android:transitionName="transition_back_arrow_btn"/>

            <TextView
                android:id="@+id/signup_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:fontFamily="@font/muli_black"
                android:textAllCaps="true"
                android:layout_marginTop="20dp"
                android:transitionName="transition_title_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    app:startIconDrawable="@drawable/field_full_name_icon"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    app:startIconDrawable="@drawable/field_username_icon"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ph_no"
                    app:startIconDrawable="@drawable/field_phone_call_icon"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"

                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/field_email_icon"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_sign"
                    app:startIconDrawable="@drawable/field_password_icon"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:background="@color/orange"
                android:layout_marginTop="20dp"
                android:elevation="5dp"
                android:transitionName="transition_next_btn"/>

            <Button
                android:id="@+id/signup_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/black"
                android:background="#00000000"
                android:layout_marginTop="20dp"
                android:elevation="5dp"
                android:transitionName="transition_login_btn"/>

        </LinearLayout>

    </ScrollView>