<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.Login"
    android:background="@color/white"
    android:padding="30dp"
    android:transitionName="transition_login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/back_buttn" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/muli_black"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="80dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/email_enter"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:startIconDrawable="@drawable/field_username_icon"
                    app:startIconTint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/muli_black"
                        android:textColor="@color/black"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/password"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:startIconDrawable="@drawable/field_password_icon"
                    app:startIconTint="@color/black"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/muli_black"
                        android:textColor="@color/black"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">


                    <Button
                        android:id="@+id/forgt_buttn"
                        android:transitionName="transition_forgot_buttn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password"
                        android:textColor="@color/black"
                        android:background="#00000000"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true" />


                </RelativeLayout>


                <Button
                    android:id="@+id/loginsucess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="15sp"
                    android:background="@color/orange"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"/>

                <Button
                    android:id="@+id/create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:transitionName="transition_create_buttn"
                    android:text="Create Account"
                    android:textColor="@color/black"
                    android:background="#00000000"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>